--- a/colmar/index.html
+++ b/colmar/index.html
@@ -74,6 +74,7 @@
                 <a href="#">Read more</a>
               </div>
             </div>
+          </div>
 
             <div class="article important">
               <div class="desktop"><img src="./resources/images/information-guest-lecture.jpg" alt=""></div>
@@ -183,13 +184,12 @@
 
             <!-- Footer -->
 
-            <footer>
-              <div class="copyright">&copy; 2016 Colmar Academy. All rights reserved</div>
-              <div class="terms">
-                <span>Terms</span>
-                <span>Privacy</span>
-              </div>
-            </footer>
-      </div>
+          <footer>
+            <div class="copyright">&copy; 2016 Colmar Academy. All rights reserved</div>
+            <div class="terms">
+              <span><a href="#">Terms</a></span>
+              <span><a href="#">Privacy</a></span>
+            </div>
+          </footer>
 
   </body>
