--- a/colmar/index.html
+++ b/colmar/index.html
@@ -29,6 +29,13 @@
       </nav>
     </header>
 
+    <div class="mobile-header">
+        <img src="./resources/images/ic-logo.svg" alt="colmar academy logo">
+        <img src="./resources/images/ic-on-campus.svg" alt="on campus icon">
+        <img src="./resources/images/ic-online.svg" alt="online icon">
+        <img src="./resources/images/ic-login.svg" alt="login icon">
+    </div>
+
       <!-- Mood Section -->
 
       <div class="moodheader">
@@ -45,11 +52,14 @@
       <div class="information-section">
         <!-- main information section  -->
           <div class="information-main">
-            <img src="./resources/images/information-main.jpg" alt="">
+            <img src="./resources/images/information-main.jpg" alt="man sitting outside reading the book 'how to win friends and influence people'">
             <div class="mainarticle-text">
               <h2>It doesn't hurt to keep practicing</h2>
-              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+              <p>
+              "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+              <br>
               <span>Emanuel, Sr Strategist at Hiring.com</span>
+              </p>
             </div>
           </div>
 
@@ -74,7 +84,6 @@
                 <a href="#">Read more</a>
               </div>
             </div>
-          </div>
 
             <div class="article important">
               <div class="desktop"><img src="./resources/images/information-guest-lecture.jpg" alt=""></div>
@@ -86,6 +95,7 @@
               </div>
             </div>
           </div>
+        </div>
 
           <!-- Start Section -->
 
@@ -149,33 +159,77 @@
             </div>
           </div>
 
-          <!-- Thesis section -->
-          <div class="thesis-section">
-            <!-- video section -->
-            <h2>Thesis Exhibit</h2>
-            <div class="video">
-              <video src="./resources/videos/thesis.mp4" controls></video>
-              <div class="mainarticle-text">
-                <h3>Reimagine urban</h3>
-                <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          <div class="subjects-mobile">
+            <h2>Start learning</h2>
+            <!-- subject section -->
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Software engineering</h3>
               </div>
             </div>
 
-            <!-- sidebar section -->
-            <div class="sidebar">
-              <div class="article important thesishidden">
-                <div class="article-text">
-                  <div class="desktop"><img src="./resources/images/thesis-fisma.jpg" alt=""></div>
-                  <h3>Fisma: Design and Prototype</h3>
-                  <p>Find which campus is close by you</p>
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Computer art</h3>
+              </div>
+            </div>
+
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Design</h3>
+              </div>
+            </div>
+
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Data</h3>
+              </div>
+            </div>
+
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Business</h3>
+              </div>
+            </div>
+
+            <div class="subject-mobile">
+              <div class="subject-title">
+                <h3>Marketing</h3>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Thesis section -->
+
+          <div class="thesis-section">
+            <!-- video section -->
+            <h2>Thesis Exhibit</h2>
+            <div class="thesis">
+              <div class="video">
+                <video src="./resources/videos/thesis.mp4" controls></video>
+                <div class="video-text">
+                  <h3>Reimagine urban</h3>
+                  <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
                 </div>
               </div>
 
-              <div class="article thesishidden">
-                <div class="article-text">
+              <!-- sidebar section -->
+              <div class="sidebar">
+                <div class="article important thesishidden">
+                  <div class="desktop"><img src="./resources/images/thesis-fisma.jpg" alt=""></div>
+                  <div class="article-text">
+                    <h3>Fisma: Design and Prototype</h3>
+                    <p>Find which campus is close by you</p>
+                  </div>
+                </div>
+
+                <div class="article thesishidden">
                   <div class="desktop"><img src="./resources/images/thesis-now-and-then.jpg" alt=""></div>
-                  <h3>Now and then</h3>
-                  <p>Research study about New York</p>
+                  <div class="article-text">
+                    <h3>Now and then</h3>
+                    <p>Research study about New York</p>
+                  </div>
                 </div>
               </div>
             </div>
