--- a/colmar/index.html
+++ b/colmar/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./resources/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Colmar Capstone Project</title>
   </head>
 
